syntax = "proto3";

package create_product_request;

message CreateProductRequest {
    string version = 1;
    string product_name = 20;
    string product_id_prefix = 21;
    bool is_offline_allowed = 40;
    uint32 max_machines_per_license = 60;
}

message CreateProductResponse {
    // the product id that you will need to specify in the license_auth
    // request
    string product_id = 1;
    // the public verifying key for this product. You will need to verify 
    // the server's signature on the key file with this public key.
    bytes product_public_key = 2;
}